--- a/client/client.html
+++ b/client/client.html
@@ -12,16 +12,46 @@
             let jsonResponse = await response.json();
             console.log(jsonResponse);
 
+            //Print a message if not printing a list
+            if(jsonResponse.message){
+                document.querySelector("#content").innerHTML = jsonResponse.message;
+                return;
+            }
+
             //for vocab list, will only get here if the user has not added any data.
             if(jsonResponse.length < 1){
                 document.querySelector("#content").innerHTML = "<h2>List is currently empty.</h2>"
                 return;
             }
 
+            //Print out the entire list if there is one to print
             for(let i = 0; i < jsonResponse.length; i++){
                 createDiv(jsonResponse[i].word, jsonResponse[i].type, jsonResponse[i].definition, document.querySelector("#content"));
             }
         }
+
+        //POST REQUESTS
+        const postRequest = async(form) => {
+            const action = form.getAttribute("action");
+            const method = form.getAttribute("method");
+
+            const wordInput = form.querySelector("#word-field");
+            const typeInput = form.querySelector("#type-select");
+            const defInput = form.querySelector("#definition-field");
+
+            const params = `word=${wordInput.value}&type=${typeInput.value}&definition=${defInput.value}`;
+
+            let response = await fetch(action, {
+                method: method,
+                headers: {
+                    "Content-Type": "application/x-www-form-urlencoded",
+                    "Accept": "application/json"
+                },
+                body: params
+            })
+
+            handleResponse(response);
+        };
 
         //GET REQUESTS
         const fetchRequest = async(button) => {
@@ -104,6 +134,16 @@
 
             const getVocabBtn = document.querySelector("#get-vocab-list");
             getVocabBtn.addEventListener("click", () => {fetchRequest(getVocabBtn)});
+
+            const vocabForm = document.querySelector("#post-vocab");
+
+            const postVocab = (e) => {
+                e.preventDefault();
+                postRequest(vocabForm);
+                return;
+            }
+
+            vocabForm.addEventListener("submit", postVocab);
         };
 
         window.onload = init;
@@ -120,13 +160,21 @@
     </div>
 
     <form id="post-vocab" action="/addVocab" method="post">
-        <label for=""></label>
-        <select id="type-select">
+        <label for="word">Word: </label>
+        <input id="word-field" type="text" name="word">
+
+        <label for="type">Type: </label>
+        <select name="type" id="type-select">
             <option value="verb">Verb</option>
             <option value="noun">Noun</option>
             <option value="adjective">Adjective</option>
             <option value="adverb">Adverb</option>
         </select>
+
+        <label for="definition">Definition: </label>
+        <input id="definition-field" type="text" name="definition">
+
+        <input type="submit" value="Add Vocab">
     </form>
 
     <div id="content">
