added note about code tutorial followed

--- a/client/client.html
+++ b/client/client.html
@@ -159,6 +159,8 @@
             newDiv.classList.add("data-entry");
             newDiv.style.backgroundColor = "white";
             newDiv.style.color = "black";
+            //https://www.w3docs.com/snippets/css/how-to-change-cursor-on-hover-in-css.html
+            //Short tutorial on how to change the cursor on mouse over
             newDiv.style.cursor = "pointer";
             
             let divTitle = document.createElement("h2");
