re-added code that printed status message for errors and successfull add or update

--- a/client/client.html
+++ b/client/client.html
@@ -28,10 +28,10 @@
             console.log(jsonResponse);
 
             //Print a message if not printing a list
-            //if(jsonResponse.message){
-            //    document.querySelector("#message").innerHTML = `<h2>${jsonResponse.message}</h2>`;
-            //    return;
-            //}
+            if(jsonResponse.message){
+                document.querySelector("#message").innerHTML = `<h2>${jsonResponse.message}</h2>`;
+                return;
+            }
 
             //should only show on search
             if(jsonResponse.word){
